--- a/login.html
+++ b/login.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>home</li>
+        <li>lis</li>
+        <li>about</li>
+        <li>contact</li>
+        <li>product</li>
+        <li>course</li>
+        <li>student</li>
     </ul>
     
 </body>
