--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <ul>
         <li>home</li>
         <li>lis</li>
@@ -16,6 +17,7 @@
         <li>course</li>
         <li>student</li>
     </ul>
+    </header>
     
 </body>
 </html>
